--- a/index.html
+++ b/index.html
@@ -69,21 +69,7 @@
     <link rel="shortcut icon" href="assets/icons/favicon.ico" />
     <meta name="theme-color" content="#ffffff" />
 
-    <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-128627708-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "UA-128627708-1");
-    </script>
+    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
 
     <script>
       window.gameVersion = "0.99.2";
@@ -168,10 +154,10 @@
       </div>
     </div>
 
-    <script type="module" src="assets/js/three.js"></script>
-    <script type="module" src="assets/js/cube.js"></script>
+    <script src="./assets/js/three.js"></script>
+    <script src="./assets/js/cube.js"></script>
 
-    <script type="module" src="upup.min.js"></script>
+    <script src="./upup.min.js"></script>
     <script>
       if (UpUp !== null) {
         UpUp.start({
