add webxdc to index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script>
       window.gameVersion = "0.99.2";
     </script>
+
+    <script src="webxdc.js"></script>
   </head>
   <body>
     <div class="ui">
