--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       name="viewport"
       content="width=device-width,height=device-height,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0"
     />
-    <link rel="stylesheet" type="text/css" href="./src/scss/styles.sass" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
 
     <script>
       window.gameVersion = "0.99.2";
