--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="author" content="Boris Sehovac" />
-    <meta
-      name="description"
-      content="See if you can solve this classic puzzle game."
-    />
     <meta
       name="viewport"
       content="width=device-width,height=device-height,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0"
     />
-    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
-
     <script>
       window.gameVersion = "0.99.2";
     </script>
@@ -98,7 +91,7 @@
       </div>
     </div>
 
-    <script src="./assets/js/three.js"></script>
-    <script src="./assets/js/cube.js"></script>
+    <script src="three.js"></script>
+    <script src="./src/js/Game.js" type="module"></script>
   </body>
 </html>
